Fixed css for overflow x scroll in view-form dialog

--- a/src/css/chats.css
+++ b/src/css/chats.css
@@ -556,7 +556,9 @@ html {
 
   overflow-y: auto;
 }
-
+#assignee-container .tasks-heading {
+  width: 100%;
+}
 #assignee-container .tasks-heading .mdc-chip__text {
   overflow: hidden;
   text-overflow: ellipsis;
